@@ -2833,11 +2833,12 @@ for-value   NIL or T
 (defun c-write-lib (form)
   (when (and *compiling-from-file* *liboutput-stream*)
     ;; write form to the liboutput stream:
-    (terpri *liboutput-stream*)
-    (write form :stream *liboutput-stream* :pretty t
-              ; :closure t :circle t :array t :gensym t
-              ; :escape t :level nil :length nil :radix t
-                :readably t :right-margin 79)))
+    (let ((*print-symbols-long* t))
+      (write form :stream *liboutput-stream* :pretty t
+                ; :closure t :circle t :array t :gensym t
+                ; :escape t :level nil :length nil :radix t
+                  :readably t :right-margin 79)
+      (terpri *liboutput-stream*))))
 (defun c-eval-and-write-lib (form) (c-write-lib form) (eval form))
 (defmacro eval-when-compile (&body body)
   `(eval-when (compile) (c-eval-and-write-lib '(progn ,@body))))
